# AuTest

./: .gitattributes  .gitignore  Pipfile  README.md  autest.sln  license.txt  noxfile.py  pylintrc  pyproject.toml  release-notes.rst  setup.cfg  setup.py  tox-helper.py  tox.ini
autest/: autest.py  autest.pyproj
autest/api/: __init__.py
autest/autest/: glb.py
autest/common/: disk.py
autest/hosts/: __init__.py  console.py  formattter.py  glb.py  output.py
autest/setupitems/: __init__.py
autest/testers/: less_than.py  not_equal.py  regexp_content.py
docs/: PortTesting.rst
docsrc/source/: changelog.rst  conf.py  index.rst
hosts/: formattter.py
src/: autest.pyproj  setup.py
src/autest/: __init__.py  __main__.py  glb.py
src/hosts/: console.py  formattter.py  glb.py  output.py
test_failing/basic/: badcommand1_fail.test  exclude_fail.test  include_fail.test  simple_stream_fail.test
test_failing/process/: timeout_fail.test.py
test_failing/setup/: copy_fail.test.py
tests/: readme.md
tests/autest-site/: setup.cli.ext  setupitem.test.ext  tester.test.ext  testformat.test.ext
tests/autest-site2/: setup.cli.ext
tests/process_tests/: process2.test.py  ready1.test.py  ready2.test.py  ready3.test.py  ready4.test.py  ready5.test  readyd1.test.py  readyd2.test.py  server.py
tests/setup_tests/: copy.test.py  copy_sym.test.py
tests/simple_tests/: condition.test.py  condition1.test.py  condition_ck_out.test.py  condition_ck_out1.test.py  condition_min_ver_out.test.py  env.test.py  excludetext.test
tests/site-tests/: custom-format.test.yaml  ignored.yaml  list-custom-format.test.py  load-order.test.py
(+264 files in other folders)
