[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autest"
version = "1.10.6"
description = "Reusable gold file testing system"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Jason Kenny", email = "dragon512@live.com"}
]
keywords = ["testing", "gold-file", "command-line", "test-automation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Software Development :: Testing",
    "Topic :: Terminals",
]
dependencies = [
    "colorama",
    "future",
    "psutil",
]

[project.urls]
Homepage = "https://github.com/AuTestSuite/AuTest.git"

[project.scripts]
autest = "autest.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["test*"]

[tool.setuptools.package-data]
"*" = ["*.txt"]

[dependency-groups]
dev = [
    "sphinx",
    "pylint",
    "mypy",
    "autopep8",
    "sphinx-autodoc-typehints",
    "doc8",
    "nox",
    "rstcheck",
    "esbonio",
]

[tool.pep8]
max-line-length = 132
